--- a/doc/开发日记.md
+++ b/doc/开发日记.md
@@ -1,10 +1,15 @@
 ![alt text](image.png)
 
-使用API进行AI对话，上下文的存储是在哪里？远端大模型存储的，还是本地存储，每一次都把上下文/缓存等发过去？
+## 流式响应？
 
-我现在要进行二次开发，除了response之外还有一些自己的，比如上下文数据,token，时间戳数据想要记录，我是把response包裹封装在一个更大的类里面好，还是再多放一个参数到函数里面好？
+## 使用API进行AI对话，上下文的存储是在哪里？远端大模型存储的，还是本地存储，每一次都把上下文/缓存等发过去？
 
-python中创建类型提示
+## 我现在要进行二次开发，除了response之外还有一些自己的，比如上下文数据,token，时间戳数据想要记录，我是把response包裹封装在一个更大的类里面好，还是再多放一个参数到函数里面好？
 
-什么是单例？
+## python中创建类型提示
 
+## 什么是单例？
+
+## 解读一下你修改的代码，并且告诉我openAI需要的union格式是什么样的
+
+## 用什么前端？
