--- a/doc/开发日记.md
+++ b/doc/开发日记.md
@@ -1,5 +1,5 @@
 ![alt text](image.png)
-
+![alt text](image-1.png)
 ## 流式响应？
 
 ## 使用API进行AI对话，上下文的存储是在哪里？远端大模型存储的，还是本地存储，每一次都把上下文/缓存等发过去？
@@ -13,3 +13,14 @@
 ## 解读一下你修改的代码，并且告诉我openAI需要的union格式是什么样的
 
 ## 用什么前端？
+
+## 组合也很怪异啊，多了很多代理，看着很臃肿。我希望像流水线一样，chatseesion作为更加底层的，parser是流水线下一环节，处理chatsession取出的数据
+
+ChatSession (数据源)
+      ↓ 产生chunk
+   Parser (处理器)
+      ↓ 解析结果
+   Dispatcher (分发器)
+      ├── 显示文本
+      ├── 执行工具
+      └── 管理状态
