--- a/doc/开发日记.md
+++ b/doc/开发日记.md
@@ -19,7 +19,7 @@
 ChatSession (数据源)
       ↓ 产生chunk
    Parser (处理器)
-      ↓ 解析结果
+      ↓ 解析结果，控制状态机
    Dispatcher (分发器)
       ├── 显示文本
       ├── 执行工具
