--- a/doc/开发日记.md
+++ b/doc/开发日记.md
@@ -24,3 +24,5 @@ ChatSession (数据源)
       ├── 显示文本
       ├── 执行工具
       └── 管理状态
+
+## 我找到问题了messages = chatSession_man.messages_list.copy()全部赋值了，既不会更新也不会保留历史信息，请修改架构并且用上self.messages_list中的信息
